grafana-traefik.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openhab
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: k3s-grafana.example.org
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: grafana-http
